# ceres_simple_examples

./: CMakeLists.txt  README.md  ceres_simple_example.cpp  note.md
notes/: Solver_options.md  cost_function_types.md
